src-tauri/tests/snapshots/parsers_snapshot__opencode_tools_list.snap
---
source: tests/parsers_snapshot.rs
expression: conversations
---
[
  {
    "id": "oc-tools-001",
    "agent_type": "open_code",
    "folder_path": "/tmp/demo",
    "folder_name": "demo",
    "title": "OpenCode tool session",
    "started_at": "[ts]",
    "ended_at": "[ts]",
    "message_count": 2,
    "model": "claude-sonnet-4-6",
    "git_branch": null
  },
  {
    "id": "oc-tools-001-child",
    "agent_type": "open_code",
    "folder_path": "/tmp/demo",
    "folder_name": "demo",
    "title": "Inspect VERSION (@general subagent)",
    "started_at": "[ts]",
    "ended_at": "[ts]",
    "message_count": 1,
    "model": null,
    "git_branch": null,
    "parent_id": "oc-tools-001"
  }
]
